working with JWT v1